added typeHierarchy as requested by Mocca
